--- a/ansible/Automation2022/roles/webserver/meta/main.yml
+++ b/ansible/Automation2022/roles/webserver/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Lars Bækmark
+  description: Solution Specialist
+  company: Arrow ECS
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -27,7 +27,11 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
+  platforms:
+   - name: EL
+     versions:
+     - 8
+     
   # - name: Fedora
   #   versions:
   #   - all
